css improves and icons align correctly justify center

--- a/style.css
+++ b/style.css
@@ -25,7 +25,7 @@ body {
 .out-container {
     display: flex;
     align-items: center;
-    height: 100vh;
+    height: 80vh;
 }
 
 /* header styles */
@@ -95,6 +95,14 @@ footer {
     display: flex;
     justify-content:space-evenly;
     margin-top: 30px;
+}
+.footer{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.footer a {
+    margin-top: 10px;
 }
 footer div i {
     color: white;
